samples/_failures_safe/1761414038_bb5402_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5998b2df.c: In function ‘main’:
./samples/SAFE/__tmp_5998b2df.c:131:13: error: expected expression at end of input
  131 |             printf("%3d ", matrix2[i][
      |             ^~~~~~
./samples/SAFE/__tmp_5998b2df.c:131:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_5998b2df.c:131:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_5998b2df.c:131:13: error: expected declaration or statement at end of input
